# hls-server

./: .gitignore  Cargo.toml  README.md  SUPPORTED_CODECS.md  test
Documentation/: AGENTS.md  Dockerfile  PERFORMANCE_REPORT.md  PLAN.md  TODO.tags.md  config.example.toml  docker-compose.yml  prometheus.yml
Documentation/00-OLD/: STATUS.md  routing.md
hls-vod-lib/: Cargo.toml  README.md
hls-vod-lib/src/: api.rs  cache.rs  error.rs  hlsvideo.rs  lib.rs  lookahead.rs  media.rs  params.rs  types.rs  url.rs
hls-vod-lib/src/audio_plan/: planner.rs
hls-vod-lib/src/ffmpeg_utils/: context.rs  helpers.rs  index.rs  io.rs  mod.rs  utils.rs
hls-vod-lib/src/index/: audio.rs  mod.rs  scanner.rs  subtitle.rs  video.rs
hls-vod-lib/src/playlist/: codec.rs  master.rs  mod.rs  variant.rs
hls-vod-lib/src/segment/: cache.rs  generator.rs  generator.rs.orig  generator.rs.rej  isobmff.rs  mod.rs  muxer.rs
hls-vod-lib/src/subtitle/: decoder.rs  extractor.rs  mod.rs  webvtt.rs
hls-vod-lib/src/tests/: dts_debug.rs  dump_test.rs  e2e.rs  fixtures.rs  init_inspect.rs  mod.rs  playlist_dump.rs  pts_debug.rs  test_audio_bug.rs  test_context_reuse.rs  test_send.rs  validation.rs  validator_debug.rs
hls-vod-lib/src/transcode/: decoder.rs  encoder.rs  mod.rs  pipeline.rs
hls-vod-server/: Cargo.toml
hls-vod-server/src/: config.rs  config_file.rs  error.rs  limits.rs  main.rs  metrics.rs  state.rs
hls-vod-server/src/http/: dynamic.rs  handlers.rs  middleware.rs  mod.rs  routes.rs  streams.rs
hls-vod-server/src/integration/: dts_debug.rs  e2e.rs  fixtures.rs  validation.rs  validator_debug.rs
jellyfin-hls-proxy/: .gitignore  AGENT.md  Cargo.toml  PLAN.md  PROJECT.md  STATUS.md
jellyfin-hls-proxy/src/: config.rs  error.rs  hls.rs  main.rs  playbackinfo.rs  proxy.rs  server.rs  types.rs
jellyfin-hls-proxy/src/handler/: fallback.rs  mod.rs  playback.rs  proxymedia.rs  websocket.rs
jellyfin-hls-proxy/src/jellyfin/: client.rs  mod.rs  types.rs
jellyfin-transmux-proxy/: Cargo.toml  PROJECT.md  README.md  STATUS.md  jellyfix-transmux-proxy.example.toml  jellyfix-transmux-proxy.toml
jellyfin-transmux-proxy/src/: config.rs  main.rs  playbackinfo.rs  proxy.rs  types.rs
src/: config_file.rs  error.rs  main.rs  metrics.rs  state.rs
src/audio_plan/: mod.rs  planner.rs
src/ffmpeg/: index.rs  io.rs  mod.rs  utils.rs
src/http/: cache.rs  dynamic.rs  handlers.rs  middleware.rs  streams.rs
src/index/: audio.rs  scanner.rs  subtitle.rs  video.rs
src/integration/: dts_debug.rs  e2e.rs  fixtures.rs  mod.rs  validator_debug.rs
src/playlist/: codec.rs  master.rs  mod.rs  variant.rs
src/segment/: generator.rs  mod.rs  muxer.rs
src/subtitle/: decoder.rs  extractor.rs
src/transcode/: decoder.rs  encoder.rs  pipeline.rs  resampler.rs
tests/assets/: bun33s.mkv  bun33s.webm
tests/scripts/: validate_hls.sh  validation_data.json  validator.sh  vtt_check.py
