[package]
name = "hls-vod-lib"
version = "0.1.0"
edition = "2021"
description = "Core HLS VOD library for media parsing, segment generation, and transcoding"
license = "MIT"

[dependencies]
ffmpeg-next = "8.0"
thiserror = "1.0"
bytes = "1.5"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "fast-rng"] }
toml = "0.8"
chrono = "0.4"
mp4 = "0.14.0"

[dev-dependencies]
tempfile = "3.9"
